--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    font-family: 'Montserrat', sans-serif;
+    width:inherit
+    
+}
+h1,h2,h3,h4{
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 
